updated Main,added print to fcai